sample-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbin-api-ingress
  namespace: httpbin-api
  annotations:
    cert-manager.io/cluster-issuer: vault-cluster-issuer
    kubernetes.io/ingress.allow-http: "false"
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: httpbin-api.cloudnativeapps.cloud
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: httpbin-api
            port:
              number: 80
  tls:
  - hosts:
    - httpbin-api.cloudnativeapps.cloud
    secretName: httpbin-api-ingress-tls-cert
